--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/contact.css">
 	<title>contact</title>
 </head>
 <body>
