--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,19 @@
 	<title>contact</title>
 </head>
 <body>
-
+	<!-- header started -->
+	<header> </header>
+	<!-- header ended -->
+	<section>
+		
+	</section>
+	<footer>
+		<a href="https://www.facebook.com/SmartAcademy.ge">
+			<img class="facebook" src="img/facebook.svg" alt="facebook">
+		</a>
+		<a href="https://www.youtube.com/">
+			<img class="youtube" src="img/youtube.svg" alt="youtube">
+		</a>
+	</footer>
 </body>
 </html>
