--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,26 @@
 	<title>contact</title>
 </head>
 <body>
-	<!-- header started -->
-	<header> </header>
-	<!-- header ended -->
-	<section>
-		
+	<header>
+	</header>
+	<section class="contact-info">
+		<div class="d-block info">
+			<h3 class="about">საკონტაქტო ინფორმაცია:<h3>
+			<p>
+				<span class="colored">მისამართი:</span> პეტრიაშვილის ქ. 30
+			</p>
+			<p>
+				<span class="colored">ტელ.:</span>
+				<a href="tel:+995 32 222 222"> +995 32 222 222</a>
+			</p>
+			<p>
+				<span class="colored">ელ. ფოსტა:</span>
+				<a href="mailto:mail@gmail.com?subject=The%20subject%20of%20the%20mail">mail@gmail.com</a>
+			</p>
+		</div>
+		<div class="d-block map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.6969156084087!2d44.77732021543564!3d41.70547817923626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cce3a01fef7%3A0x2a75ae2128072d6!2s30%20Vasil%20Petriashvili%20Street%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1619248794363!5m2!1sen!2sge" width="874" height="466" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		</div>
 	</section>
 	<footer>
 		<a href="https://www.facebook.com/SmartAcademy.ge">
