--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,30 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/contact.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>contact</title>
 </head>
 <body>
 	<header>
-		<!-- header -->
+		<header>
+			<img class="disflay"src="image/image.png"alt="html">
+			<nav>
+				<ul>
+					<li class="color">
+							<a href="#">მთავარი</a>
+					</li>
+					<li>
+						<a href="#">სიახლეები</a>
+					</li>
+					<li>
+						<a href="#">კონტაქტი</a>
+					</li>
+				</ul>
+			</nav>
+		<div>
+				<img class="box"src="image/image2.png"alt="html">
+			</div>
+		</header>
 	</header>
 	<section class="contact-info">
 		<div class="d-block info">
