--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style/reset.css">
-		<link rel="stylesheet" type="text/css" href="">
-		<link rel="stylesheet" type="text/css" href="style/main.css">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>ლექცია 5</title>
 	</head>
 	<body>
@@ -12,13 +11,13 @@
 			<nav>
 				<ul>
 					<li class="color">
-							<a href="#">მთავარი</a>
+							<a href="index.html">მთავარი</a>
 					</li>
 					<li>
 						<a href="#">სიახლეები</a>
 					</li>
 					<li>
-						<a href="#">კონტაქტი</a>
+						<a href="contact.html">კონტაქტი</a>
 					</li>
 				</ul>
 			</nav>
