--- a/contact.html
+++ b/contact.html
@@ -2,31 +2,29 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>contact</title>
 </head>
 <body>
 	<header>
-		<header>
-			<img class="disflay"src="image/image.png"alt="html">
-			<nav>
-				<ul>
-					<li class="color">
-							<a href="#">მთავარი</a>
-					</li>
-					<li>
-						<a href="#">სიახლეები</a>
-					</li>
-					<li>
-						<a href="#">კონტაქტი</a>
-					</li>
-				</ul>
-			</nav>
-		</header>
+		<img class="disflay"src="image/image.png"alt="html">
+		<nav>
+			<ul>
+				<li class="color">
+						<a href="index.html">მთავარი</a>
+				</li>
+				<li>
+					<a href="#">სიახლეები</a>
+				</li>
+				<li>
+					<a href="contact">კონტაქტი</a>
+				</li>
+			</ul>
+		</nav>
 	</header>
 	<section class="contact-info">
 		<div class="d-block info">
-			<h3 class="about">საკონტაქტო ინფორმაცია:<h3>
+			<h4 class="about">საკონტაქტო ინფორმაცია:<h4>
 			<p>
 				<span class="colored">მისამართი:</span> პეტრიაშვილის ქ. 30
 			</p>
