corected header styles

--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-	<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<title>ლექცია 5</title>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>მთავარი</title>
 	</head>
-	<body>
-		<header>
-			<img class="disflay"src="image/image.png"alt="html">
-			<nav>
-				<ul>
-					<li class="color">
-							<a href="index.html">მთავარი</a>
-					</li>
-					<li>
-						<a href="#">სიახლეები</a>
-					</li>
-					<li>
-						<a href="contact.html">კონტაქტი</a>
-					</li>
-				</ul>
-			</nav>
-		<div>
-				<img class="box"src="image/image2.png"alt="html">
-			</div>
-		</header>
-			<h1>FEATURED | view all featured media</h1>
-			<div class="wrapper">
-				<h2>RESFONSIVE VEB DESING</h2>
-				<img class="wraffer-image"src="image/image3.png"alt="html">
-			<p class="text">
+<body>
+	<header>
+		<img class="disflay"src="image/image.png"alt="html">
+		<nav>
+			<ul>
+				<li>
+					<a class="active" href="index.html">მთავარი</a>
+				</li>
+				<li>
+					<a class="navbar-li" href="#">სიახლეები</a>
+				</li>
+				<li>
+					<a class="navbar-li" href="contact.html">კონტაქტი</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<div>
+		<img class="box"src="image/image2.png"alt="html">
+	</div>
+	<h1>FEATURED | view all featured media</h1>
+	<div class="wrapper">
+		<h2>RESFONSIVE VEB DESING</h2>
+		<img class="wraffer-image"src="image/image3.png"alt="html">
+		<p class="text">
 				approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.
-			</p>
+		</p>
 		</div>
 		<div class="block">
 			<h3>APP DEVELOPMENT</h3>
@@ -40,14 +40,14 @@
 				Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system
 			</p>
 	</div>
-		<footer>
-		<a href="https://www.facebook.com/SmartAcademy.ge">
-			<img class="facebook" src="image/image5.png"alt="facebook">
-		</a>
-		<a href="https://www.youtube.com/">
-			<img class="youtube" src="image/image6.png"alt="youtube">
+	<footer>
+	<a href="https://www.facebook.com/SmartAcademy.ge">
+		<img class="facebook" src="image/image5.png"alt="facebook">
+	</a>
+	<a href="https://www.youtube.com/">
+		<img class="youtube" src="image/image6.png"alt="youtube">
 		</a>
 	</footer>
-   	</body>
-	</html>
+</body>
+</html>
 
