--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,21 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>contact</title>
+	<title>კონტაქტი</title>
 </head>
 <body>
 	<header>
 		<img class="disflay"src="image/image.png"alt="html">
 		<nav>
 			<ul>
-				<li class="color">
-						<a href="index.html">მთავარი</a>
+				<li>
+					<a class="active" href="index.html">მთავარი</a>
 				</li>
 				<li>
-					<a href="#">სიახლეები</a>
+					<a class="navbar-li" href="#">სიახლეები</a>
 				</li>
 				<li>
-					<a href="contact">კონტაქტი</a>
+					<a class="navbar-li" href="contact.html">კონტაქტი</a>
 				</li>
 			</ul>
 		</nav>
